# gauge-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: data_preprocessing.ipynb
src/: main.py  predict.py  train.py  visualization.py
